Fix landing page footer copyright spacing

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -750,7 +750,7 @@ font-family: 'SourceSansPro';
 #landing_footer .copyright{
 	font-family: 'SourceSansPro';
 	font-weight: bold;
-	margin-bottom: 0px;
+	margin-bottom: 4px;
 	margin-top: 20px;
 	@media only screen and (max-width : 767px){
 		font-size: 110%;
